--- a/templates/students.html
+++ b/templates/students.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<script src="../static/jquery-3.3.1.min.js"></script>
+	<script src="../static/students.js"></script>	
 	<title>Student Form</title>
 </head>
 <body>
